# FinSynapse

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  briefs.en.html  briefs.html  en.html  glossary.en.html  glossary.html  index.html  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  daily.yml
api/: divergence_latest.json  indicators_latest.json  manifest.json  temperature_latest.json
brief/: 2026-04-29.html  2026-04-30.html  2026-04-30.md  2026-05-01.html  2026-05-04.html  2026-05-04.md  2026-05-05.html  2026-05-05.md  2026-05-06.html  2026-05-06.md  2026-05-07.html  2026-05-07.md  2026-05-08.html  2026-05-08.md  2026-05-09.html  2026-05-09.md  2026-05-11.html  2026-05-11.md  2026-05-12.html  2026-05-12.md  2026-05-13.html  2026-05-13.md  2026-05-14.html  2026-05-14.md  2026-05-15.html  2026-05-15.md  2026-05-18.html
config/: weights.yaml
data/gold/brief/: 2026-04-29.md  2026-05-01.md  2026-05-18.md
docs/_local/: 2026-05-03-p2-probe-results.md  2026-05-03-validation-audit-policy.md
research/industry/semiconductor/: 半导体行业周期性分析-20260504.md
scripts/: backtest_pivots.yaml  backtest_temperature.py  champion_baseline.json  fetch_external_anchors.py  grid_search_weights.py  oos_backtest.py  probe_akshare.py  probe_cn_pmi.py  probe_hk_alt_valuation.py  probe_hk_valuation.py  probe_hkma_balance.py  probe_hsi_pcr.py  probe_phase_b.py  probe_shiller_cape.py  probe_us_yield_curve.py  run_validation.py  validation_lib.py
src/finsynapse/: cli.py  config.py
src/finsynapse/dashboard/: api.py  app.py  charts.py  data.py  historical_events.py  i18n.py  render_static.py  validation_data.py
src/finsynapse/dashboard/pages/: 01_validation.py
src/finsynapse/dashboard/templates/: _clarity.html.j2  brief_archive.html.j2  brief_single.html.j2  footer.html.j2  glossary.html.j2  static.html.j2
src/finsynapse/providers/: akshare_cn.py  akshare_flow.py  base.py  fred.py  multpl.py  retry.py  treasury_real_yield.py  yfinance_hk.py  yfinance_macro.py
src/finsynapse/report/: brief.py
src/finsynapse/transform/: divergence.py  health_check.py  normalize.py  percentile.py  temperature.py
src/finsynapse/warehouse/: __init__.py  store.py
tests/: conftest.py  test_akshare.py  test_dashboard_api.py  test_grid_search.py  test_oos_backtest.py  test_providers.py  test_transform.py  test_validation.py  test_validation_lib.py  test_warehouse.py  test_yfinance_macro.py
tests/fixtures/: yfinance_macro_2026-04-01_2026-04-15.pkl
